sumo/tests/duarouter/errors/no_input/options.duarouter
--net-file=net.net.xml -o routes.rou.xml
